src/test/ui/did_you_mean/issue-36798_unknown_field.stderr
error[E0609]: no field `zz` on type `Foo`
  --> $DIR/issue-36798_unknown_field.rs:17:7
   |
17 |     f.zz; //~ ERROR no field
   |       ^^ unknown field
   |
   = note: available fields are: `bar`

error: aborting due to previous error

